crates/dag-macros/tests/ui/workflow_spill_tier_ident.stderr
error: spill! requires `tier = "..."`
  --> tests/ui/workflow_spill_tier_ident.rs:41:36
   |
41 |     spill!(trigger -> sink, tier = local);
   |                                    ^^^^^
